--- a/compose.yaml
+++ b/compose.yaml
@@ -7,3 +7,5 @@ services:
       - 'MONGO_INITDB_ROOT_USERNAME=root'
     ports:
       - '27017'
+    tmpfs:
+      - /data/db  # tmpfs 설정 - 컨테이너 종료 시 데이터 저장X
